            - added "del_category()" function
                - check if category name is selected on a rule
            - enable/disable "OK" button only on wxEVT_COMMAND_TEXT_UPDATED instead of wxEVT_COMMAND_TEXT_UPDATED + wxEVT_KILL_FOCUS
            - fixed bug where add_category overwrites last category on list
        - tab 6:
            - show filesize of log + error file

        - global:
            - added "inTable(table, value, field)" function to search in table
                - table: table to search in
                - value: value to search for
                - field: optional field for multidimensional tables
            - added "spairs(table , order, field)" function to order a table
                - table: table to search in
                - order: asc | desc | custom funtion
                - field: optional field for multidimensional tables
            - added "table.copy(tablename)" function to clone a table
                - tablename: table to clone

    - update: "core/announce.lua"  / by jrock
        - added "check_for_whitespaces()" function
        - added "age_in_days()" function

v0.7 [2015-10-15]

    - update: "core/net.lua"
        - some fixes

    - update: "Announcer.wx.lua"
        - fixed problem with "open in foreground" if app is iconized

v0.6 [2015-10-09]

    - update: "certs/make_cert.bat"
        - using a random generated value for CN
        - servercert and cacert using the same CN value now
        (alternatively you can use the Luadch Certmanager v1.2 to make a new cert)

    - update: "certs/show_certinfo.bat"
        - added "@echo off"  / thx Sopor

    - update: "core/net.lua"
        - added new command routine
        - using "AP" flag for the client name in "BINF"
        - changed second BINF send method
            - fixing "0/1/0" bug

    - update: "Announcer.wx.lua"
        - code cleanup
        - send a "really quit?" dialog on "wxEVT_CLOSE_WINDOW" event  / requested by Sopor